# owl

./: CMakeLists.txt  Dockerfile  Readme.md  main.cpp
my_http_log_monitor/: CMakeLists.txt  http_log_parsed_data_holder.cpp  http_log_parsed_data_holder.h  my_http_log_monitor.cpp  my_http_log_monitor.h  report_http_stats_rule.cpp  report_http_stats_rule.h  traffic_period_threshold_rule.cpp  traffic_period_threshold_rule.h
owlib/: CMakeLists.txt  alert.cpp  http_logowl.cpp  http_logowl.h  invalid_argument_exception.cpp  logowl.cpp  logowl.h  owl.cpp  owl.h  owl_builder.cpp  owl_builder.h  utils.cpp  utils.h
owlib/alert/: alert.h
owlib/exception/: invalid_argument_exception.cpp  invalid_argument_exception.h
owlib/owl/: logowl.cpp  logowl.h  owl.h  owl_builder.cpp  owl_builder.h
owlib/parser/: csv_log_parser.cpp  csv_log_parser.h  log_parser.cpp  log_parser.h
owlib/reader/: file_log_reader.cpp  file_log_reader.h  log_reader.cpp  log_reader.h
owlib/rule/: process_log_rule.cpp  process_log_rule.h
owlib/test/: CMakeLists.txt  http_logowl_tester.cpp
test/: CMakeLists.txt  my_http_log_monitor_tester.cpp
